# SimpleLogger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
samples/: CMakeLists.txt  test.cpp
src/: logger.cxx
